<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    android:fadingEdge="horizontal"
    android:focusable="auto"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="253dp"
        android:layout_height="244dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="216dp"
        android:contentDescription="@string/movie_logo"
        android:scaleType="fitEnd"
        android:src="@drawable/logo_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:hint="@string/username"
        android:padding="@dimen/valueRegular"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="@dimen/valueRegular"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>